<resources>
    <string name="app_name">Laputa Clouds Lib</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="google_drive">Google Drive</string>
    <string name="onedrive">OneDrive</string>
    <string name="dropbox">DropBox</string>
    <string name="pdrive">pDrive</string>
    <string name="box">Box</string>
    <string name="sample">Sample</string>
    <string name="app_folder">App folder</string>
    <string name="file_actions">File actions</string>
</resources>
